output/test-flask/templates/ingress.yaml
---
# Source: test-flask/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: test-flask-3
spec:
  rules:
  - host: test-flask-3.example.govsvc.uk
    http:
      paths:
      - backend:
          serviceName: test-flask-3
          servicePort: 80
  tls:
  - hosts:
    - test-flask-3.example.govsvc.uk
    secretName: test-flask-3-tls-cert
